<resources>
    <string name="app_name">Juego de Memoria</string>
    <string name="Comenzar">Comenzar</string>
    <string name="Volver">Volver</string>
    <string name="ComoJugar">Como Jugar</string>
    <string name="ayudaUno">1-Debe tocar en la tarjeta para que esta voltee y descubra que numero lleva.</string>
    <string name="AyudaDos">2-Memorizar el numero descubierto y buscarle su par con las demas tarjetas.</string>
    <string name="ayudaTres">3-El objetivo final es encontrar los pares en la menor cantidad de movimiento posibles.(Se le llama movimiento al voltear dos tarjetas.)</string>
    <string name="contador">Contador</string>
    <string name="Ayuda">Ayuda</string>
    <string name="Volver_a_Jugar">Volver a Jugar</string>
    <string name="Porcentaje">Porcentaje de Acierto</string>
    <string name="Ganaste">Ganaste!</string>
    <string name="Cant_movimiento">Cantidad de Movimiento:</string>
    <string name="Salir">Salir</string>
    <string name="Podio">Podio</string>
    <string name="ConfirmacionTitulo">¿Deseas Salir?</string>
    <string name="aceptarSalir">Salir</string>
    <string name="cancelarSalir">Cancelar</string>
    <string name="PuestoUno">Puesto 1:</string>
    <string name="compartirPun">Compartir Puntaje</string>
    <string name="volverMenu">Volver al Menu</string>
    <string name="reiniciarJuego">Reiniciar Juego</string>
    <string name="compartirPuntajeTexto">Tu Puntaje es:</string>
    <string name="nuevoRecord">Nuevo Record!! Ingresa tu nombre</string>
    <string name="compartir">Compartir</string>
    <string name="aceptar">Aceptar</string>
    <string name="Posicion">Posicion</string>
    <string name="Nombre">Nombre</string>
    <string name="Movimientos">Movimientos</string>
    <string name="Jugar">Jugar</string>
    <string name="Que_quieres_hacer">Que Quieres hacer?</string>
    <string name="Sin_Podio">Sin Podio</string>
</resources>