<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ganaste"
            android:layout_marginLeft="40dp"
            android:textSize="80dp"
            android:textColor="@color/black"/>
        <TextView
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cant_movimiento"/>
        <TextView
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/cantMov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANT MOV"/>
        <TextView
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Porcentaje"/>
        <TextView
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/porcTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PORCENTAJE"/>
        <Button
            android:layout_gravity="center"
            android:onClick="comenzarJuego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Volver_a_Jugar"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>